<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.addstroies.AddStroiesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"
                tools:visibility="visible" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/my_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:title="@string/new_stories" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_preview"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_marginTop="12dp"
                        android:contentDescription="@string/image_preview"
                        app:srcCompat="@drawable/ic_baseline_library_books_24" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_gallery"
                        android:layout_width="135dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:alpha="0"
                        android:text="@string/gallery" />

                    <Button
                        android:id="@+id/btn_camera_x"
                        android:layout_width="135dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:alpha="0"
                        android:elevation="2dp"
                        android:scaleType="fitCenter"
                        android:text="@string/camera"
                        app:layout_constraintEnd_toStartOf="@+id/guideline3"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/iv_preview" />
                </LinearLayout>

                <EditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="60dp"
                    android:alpha="0"
                    android:autofillHints="Your description"
                    android:background="@drawable/border_corner"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    android:maxLines="3"
                    android:minLines="4"
                    android:padding="10dp"
                    android:scrollbars="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_camera_x" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="32dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/share_my_location" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switchCompact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:alpha="0" />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_upload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="60dp"
                    android:alpha="0"
                    android:text="@string/upload" />

            </LinearLayout>


        </RelativeLayout>

    </LinearLayout>

</ScrollView>